# devflow

./: .devflow.yaml  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  LICENSE  LICENSE-APACHE  OPERATIONS.md  README.md  ROADMAP.md  SECURITY.md  distrobox.ini  doc-check-allowlist.toml
.claude/skills/ai-change-acceptance/: SKILL.md
.devcontainer/: devcontainer.json
.devflow/: events.jsonl  lock-15  lock-project  phase-07-stdout  phase-15-agent-pid  phase-15-stdout  state-15.json  state.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  devcontainer.yml
.gsd/: notifications.jsonl
.omx/: metrics.json
.omx/cache/: codebase-map.json
.omx/logs/: notify-fallback-2026-06-16.jsonl  omx-2026-06-16.jsonl  session-history.jsonl  turns-2026-06-16.jsonl
.omx/state/: current-task-baseline.json  notify-fallback-state.json  subagent-tracking.json  tmux-hook-state.json  update-check.json
.planning/: .continue-here.md  HANDOFF.json  OPERATOR-OBSERVABILITY-FINDINGS.md  PROJECT.md  ROADMAP.md  STATE.md  TEST-SUITE-QA-REVIEW.md  config.json
.planning/codebase/: ARCHITECTURE.md  AUDIT.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-ASSESSMENT.md
.planning/phases/: 07-TODO-test-recommendations.md
.planning/phases/01-ci-tests/: 1-SUMMARY.md  PLAN.md
.planning/phases/02-cargo-version/: 2-SUMMARY.md  CONTEXT.md
.planning/phases/03-verify-docs/: 3-SUMMARY.md  CONTEXT.md
.planning/phases/04-hermes-skill/: 4-SUMMARY.md  CONTEXT.md  PLAN.md
.planning/phases/05-agent-trait/: 5-SUMMARY.md  CONTEXT.md  PLAN.md  POSTMORTEM.md
.planning/phases/06-pr-integration/: 6-SUMMARY.md  CONTEXT.md  DESIGN-agent-completion.md  PLAN.md
.planning/phases/07-worktrees-pr/: 7-SUMMARY.md  CONTEXT.md  PLAN.md
.planning/phases/08-docs-onboarding/: 8-SUMMARY.md  CONTEXT.md
.planning/phases/09-oss-polish/: 9-SUMMARY.md  CODEX-REVIEW.md  CODEX_REVIEW.md  CONTEXT.md  PLAN.md  REVIEW.md  SIZING-REPORT.md
.planning/phases/10-logging-planning-step/: 10-PLAN.md  10-SUMMARY.md  CONTEXT.md
.planning/phases/11-branching-merge-devcontainer/: CONTEXT.md
.planning/phases/11-branding-merge-devcontainer/: CONTEXT.md
.planning/phases/11-git-flow-release/: CONTEXT.md
.planning/phases/11-refactor-gsd-native/: 11-PLAN.md  11-REVIEW.md  11-SUMMARY.md  11-VALIDATION.md  CONTEXT.md
.planning/phases/11-remediation/: 11r-CONTEXT.md  11r-DISCUSSION-LOG.md  11r-PLAN.md  11r-SUMMARY.md  11r-VALIDATION.md
.planning/phases/12-bootstrap-housekeeping/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md  12-04-PLAN.md  12-04-SUMMARY.md  12-05-PLAN.md  12-05-SUMMARY.md  12-06-PLAN.md  (+18 more)
crates/devflow-cli/: Cargo.toml  build.rs
crates/devflow-cli/src/: commands.rs  config_parse.rs  main.rs  parallel.rs  pipeline_gate.rs  pipeline_launch.rs  pipeline_outcomes.rs  preflight.rs  staleness.rs  test_support.rs
crates/devflow-cli/tests/: build_provenance.rs  devcontainer_ci_failfast.rs  gitignore_coverage.rs  help_snapshot.rs  log_format_env.rs  phase7_cli.rs  release_check.rs  workspace_version_pin.rs
crates/devflow-cli/tests/snapshots/: devflow-help.txt
crates/devflow-core/: Cargo.toml
crates/devflow-core/src/: agent.rs  agent_result.rs  config.rs  doc_check.rs  events.rs  gates.rs  git.rs  history.rs  hooks.rs  lib.rs  lock.rs  mode.rs  monitor.rs  outcome_policy.rs  prompt.rs  recover.rs  ship.rs  stage.rs  state.rs  tmux.rs  verify.rs  version.rs  workflow.rs  worktree.rs
crates/devflow-core/src/agents/: claude.rs  codex.rs  mod.rs  omx.rs  opencode.rs
crates/devflow-core/tests/: devflow_dir_gitignore.rs  monitor_e2e.rs
docs/: index.md  mkdocs.yml
docs/architecture/: agent-model.md  git-ship.md  overview.md  state-machine.md
docs/assets/: extra.css  extra.js
docs/diagrams/: agent-lifecycle.md  module-map.md  ship-flow.md  system.md
docs/guides/: adding-agent.md  configuration.md  quickstart.md
scripts/: deploy.sh  install.sh  sync-main-to-develop.sh
scripts/hooks/: pre-push
(+245 files in other folders)
