[workspace]
resolver = "2"
members = [
    "crates/devflow-core",
    "crates/devflow-cli",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/denniyahh/devflow"
description = "Agent-agnostic development workflow automation CLI"
authors = ["Dennis Kim <denniyahh@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
