[package]
name = "devflow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DevFlow CLI — agent-agnostic development workflow automation"

[dependencies]
devflow-core = { path = "../devflow-core", version = "1.4.0" }
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
