[package]
name = "devflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent-agnostic development workflow state machine"

[dependencies]
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
